# wordle-es-solver

./: README.md  pyproject.toml  wordle.R  wordle.py
data/: my_corpus.rds  popularidad.json  popularidad.rds
